--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,13 @@ services:
     ports:
       - "4200:4200" # specify port forewarding
 
+  # links property of the docker-compose file creates a connection to the other service with the name of the service as the host name. In this case database will be the hostname. Meaning, to connect to it frrom the express service, we should use database:27017. That's why the dbHost is equal to mongodb://database/mean-docker
   express: #name of the second service
     build: express-server # specify the directory of the Dockerfile
     ports:
       - "3000:3000" #specify ports forewarding
+    links:
+      - database # link this service to the database service
 
   database: # name of the third service
     image: mongo # specify image to build container from
