--- a/express-server/package.json
+++ b/express-server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "express": "~4.14.0",
+    "http": "0.0.0",
     "mongoose": "^4.11.11"
   }
 }
